# octopath-2-practice-tool

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs  process.rs  process_list.rs
