[package]
name = "octopath-2-practice-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
]}
egui = "0.21.0"
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core" }
proc-maps = "0.3.0"
read-process-memory = "0.1.6"
snafu = { version = "0.7.0", default-features = false }
sysinfo = "0.28.4"
